load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "docs.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/v5/beacon-chain/rpc/docs",
    visibility = ["//beacon-chain/rpc:__subpackages__"],
    deps = [
        "@com_github_swaggo_swag//:go_default_library"
    ],
)

genrule(
    name = "generate_swagger",
    srcs = ["//beacon-chain/rpc:go_default_library"],  # Reference Go files from parent
    outs = ["swagger.json"],  # Output in current package
    tags = ["no-cache"],
    cmd = """
        export PATH=$$PATH:$$(dirname $(location @com_github_swaggo_swag//cmd/swag))
        $(location @com_github_swaggo_swag//cmd/swag) init \
            --dir $$(dirname $(location //beacon-chain/rpc:endpoints.go)) \
            -g endpoints.go \
            -o $(@D)
    """,
    tools = [
        "@com_github_swaggo_swag//cmd/swag",
        "//beacon-chain/rpc:endpoints.go",
    ],
    visibility = ["//visibility:public"],
)